--- a/src/components/home/MainPage.css
+++ b/src/components/home/MainPage.css
@@ -34,9 +34,9 @@ h1 {
 #p1:hover {
   color: #ffb000;
 }
-#about{
-  /* margin-bottom: 5rem; */
-}
+/* #about{
+   margin-bottom: 5rem; 
+} */
 #aboutp {
   font-size: 1rem;
 }
